fixes some alignment issues

--- a/eBank.Web/ClientApp/src/app/shared/components/side-nav/side-nav.component.scss
+++ b/eBank.Web/ClientApp/src/app/shared/components/side-nav/side-nav.component.scss
@@ -1,6 +1,6 @@
-.mat-sidenav-container {
-  height: 100%;
-}
+// .mat-sidenav-container {
+//   height: 100%;
+// }
 
 .mat-sidenav {
   margin-top: 100px;
